Added SIgnup fuctionality to frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 MONGODB_PASS="2DdorWNjmP6LdZVn"
 MONGODB_USERNAME="rohitmauryaeh_db_user"
-PORT=3000
+MONGO_URI="mongodb+srv://rohitmauryaeh_db_user:2DdorWNjmP6LdZVn@cluster0.wvfjtph.mongodb.net/lms"
+
 SECRET_KEY="jhgcfghjojhgch"
-MONGO_URI=mongodb+srv://rohitmauryaeh_db_user:2DdorWNjmP6LdZVn@cluster0.wvfjtph.mongodb.net/lms
+PORT=3000
